# PGE2019

./: README.md
Condor/: ReadMe.txt
Condor/Detect-Locate-Default/: Readme.txt
Condor/Detect-Locate-Default/darkflow/cfg/: yolo-1c.cfg
Condor/Detect-Locate-Default/integration/: DetecteurRouille.py  README.txt  detection_dft.py  dtDefaultIso.py  extract.py
Condor/Detect-Locate_Pylon/: ReadMe.txt
Condor/Detect-Locate_Pylon/Aptere/: ReadMe.txt
Condor/Detect-Locate_Pylon/No_Aptere/: ReadMe.txt  appro_ros.cpp  calculateFocalLength.py  capture.cpp  detectPyloneProfondeur.py  extract_pylonTop.py  getPosOr_pylPhy.py
Condor/FasterRCNN/: Environement_Setup_README  README_tuto_FRCNN  Test_FRCNN_README  faster_rcnn_resnet101_coco.config  golden_z_demo.ipynb  label.pbtxt
Condor/botArmada/: ReadMe.txt  botArmada.py  botArmadaRun.bat  coord.txt  setCoord.py  setCoordRun.bat
Corbeau/: ReadMe.txt  Readme.md  SN18231.conf
Corbeau/Ancien/: ReadMe.txt  bashrc_backup
Corbeau/Docs/: Installation Jetson Nano.md  Installation drivers caméra Bluefox2.md  Installation rosbridge.md  Mise en place VNC Jetson Nano.md  Tests installation SLAM sur l'Odroïd.md  Utilisation RTABMap.md
Corbeau/Fichier_CMakeLists_bluefox2/: FindmvIMPACT.cmake
Corbeau/Fichiers_custom_RTABMap/rtabmap/: PGE_rtabmap.ini
Corbeau/Tuto_tiago/: Désactiver les caméras de profondeurs de Tiago.md  Lancement_demo_tiago
Corbeau/branchement/: jeston_branchement.xml
Corbeau/ressource_pylone/: readme
Corbeau/ressource_pylone/CAO_pylone_soures/: readme
Corbeau/ressource_pylone/pylone_echelle/: model.config  model.sdf  model_pylone_echelle_back.sdf  readme
Corbeau/tiago_pge/: frames.gv  tiago.rosinstall
Corbeau/tiago_pge/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Corbeau/tiago_pge/src/: .rosinstall  plan_arm_torso_ik_pylon.h  setup.sh
Corbeau/tiago_pge/src/test_pge/test_joint_control/: CMakeLists.txt
Corbeau/zed_capture/: CMakeLists.txt
Corbeau/zed_capture/src/: capture.cpp
Faucon/: ReadMe.txt
Faucon/BDD/: naavi_pge.sql
Faucon/BDD/code_php/: Read_ME.txt
Faucon/ENVOL/: Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  ENVOL V2.sln  Pcx.Editor.csproj  Pcx.csproj
Faucon/ENVOL/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+5094 files in other folders)
